# image-quality-auditor

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: Create codeql.yml  ci.yml  codeql.yml
src/image_quality_auditor/: __init__.py  anonymizer.py  cli.py  config.py  metrics.py  models.py  reporter.py  scanner.py
src/image_quality_auditor/templates/: report.html.jinja2
tests/: conftest.py  test_anonymizer.py  test_config.py  test_metrics.py  test_models.py  test_reporter.py  test_scanner.py  test_smoke.py
