[project]
name = "image-quality-auditor"
version = "0.1.0"
description = "Production-grade CLI tool for auditing image datasets quality — built for AI Vision pipelines (Computer Vision portfolio project)"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
authors = [
    { name = "Łukasz Olszewski", email = "lukaszolszewski96@gmail.com" }
]
requires-python = ">=3.13"
keywords = ["computer-vision", "image-quality", "data-validation", "cli", "ai-vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.4.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.14.2",
    "opencv-python>=4.10",
    "numpy>=2.5.0",
    "pandas>=3.0.4",
    "pillow>=11.0",
    "jinja2>=3.1",
]
[project.scripts]
image-quality-auditor = "image_quality_auditor.cli:audit"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"


# ============================================================
# DEV DEPENDENCIES — local install / in CI
# ============================================================
[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-pillow",
    "pre-commit>=4.0",
]

# ============================================================
# RUFF — linter + formatter (zastępuje black, flake8, isort)
# ============================================================
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import ordering)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade (modern Python syntax)
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ============================================================
# MYPY — type checker (strict)
# ============================================================
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
files = ["src", "tests"]

# OpenCV nie ma stubów — wyłączamy dla cv2
[[tool.mypy.overrides]]
module = ["cv2.*"]
ignore_missing_imports = true

# ============================================================
# PYTEST — konfiguracja testów + coverage
# ============================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=image_quality_auditor",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src/image_quality_auditor"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
